--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "bootstrap-sass": "^3.0.0",
     "gulp": "^3.9.1",
     "laravel-elixir": "^5.0.0",
-    "laravel-elixir-vueify": "*",
+    "laravel-elixir-vueify": "1.0.3",
     "vue-resource": "^1.0.2",
     "vue-router": "^0.7.13",
     "vueify": "^8.7.0"
